<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

        <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/basketball"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_marginStart="16dp"
                android:textSize="@dimen/text_big"
                android:layout_gravity="center"
                android:text="@string/basketball_league"/>

    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today_match"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:textSize="20sp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

        <EditText
                android:id="@+id/edt_team_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="3dp"
                android:gravity="center"
                android:hint="@string/team_a"/>

        <EditText
                android:id="@+id/edt_team_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginStart="3dp"
                android:gravity="center"
                android:hint="@string/team_b"/>

    </LinearLayout>

    <Button
            android:id="@+id/btn_match_begin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/match_begin"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            style="@style/Widget.AppCompat.Button.Colored"/>

    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/basketballplayer"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous_match"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:textSize="20sp"/>

</LinearLayout>