<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ScoreActivity">

    <TextView
            android:text="@string/match_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_txt_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:textSize="@dimen/text_big"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            app:layout_constraintGuide_percent="0.50121653"/>

    <TextView
            android:text="Nama Team A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_nama_team_a"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/id_txt_name"/>

    <TextView
            android:text="Nama Team B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_nama_team_b"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/id_txt_name"/>

    <TextView
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_score_a"
            app:layout_constraintTop_toBottomOf="@+id/txt_nama_team_a"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"
            android:textSize="36sp"/>

    <TextView
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_score_b"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_nama_team_b"
            android:layout_marginTop="24dp"
            android:textSize="36sp"/>

    <Button
            android:text="@string/point_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_score_a"
            style="@style/Widget.AppCompat.Button.Colored"
            android:onClick="plus3PointTeamA"/>

    <Button
            android:text="@string/point_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_plus2_team_a"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:onClick="plus2PointTeamA"/>

    <Button
            android:text="@string/free_throw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_plus2_team_a"
            style="@style/Widget.AppCompat.Button.Colored"
            android:onClick="freeThrowTeamA"/>

    <Button
            android:text="@string/point_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_plus3_team_b"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_score_b"
            style="@style/Widget.AppCompat.Button.Colored"/>

    <Button
            android:text="@string/point_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_plus2_team_b"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_plus3_team_b"
            style="@style/Widget.AppCompat.Button.Colored"/>

    <Button
            android:text="@string/free_throw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_freethrow_team_b"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_plus2_team_b"
            style="@style/Widget.AppCompat.Button.Colored"/>

    <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button7"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            style="@style/Widget.AppCompat.Button.Colored"/>

    <Button
            android:text="@string/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button8"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button7"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:onClick="resetScore"/>

    <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:id="@+id/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/button3"
            android:layout_marginTop="8dp"
            android:background="#5E5D5D"
            app:layout_constraintTop_toTopOf="@+id/txt_nama_team_a"/>

</androidx.constraintlayout.widget.ConstraintLayout>